--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
   <app-image style="width: 50%;"></app-image>
-  <app-info-user tyle="width: 50%;"></app-info-user>
+  <app-info-user style="width: 35%;"></app-info-user>
 </div>
