--- a/src/app/components/info-user/info-user.component.css
+++ b/src/app/components/info-user/info-user.component.css
@@ -1,7 +1,7 @@
 .container {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: space-around;
 }
