--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,8 +1,11 @@
-@for (task of listTasks; track $index) {
-  <app-comment [text]="task.text" [author]="task.author.name" [date]="task.date" [callback]="removeComment($index)"></app-comment>
-} @empty {
-  <app-comment [text]="'Sin comentarios'"></app-comment>
-}
-
-<input [(ngModel)]="comment" (input)="onInputChangeComment($event)" type="text">
-<button (click)="addNewComment($event)" [disabled]="isDisabled"> Añadir</button>
+<div class="container">
+  @for (task of listTasks; track $index) {
+    <app-comment [text]="task.text" [author]="task.author.name" [date]="task.date" [callback]="removeComment($index)"></app-comment>
+  } @empty {
+    <app-comment [text]="'Sin comentarios'"></app-comment>
+  }
+  <div>
+    <input [(ngModel)]="comment" (input)="onInputChangeComment($event)" type="text">
+    <button (click)="addNewComment($event)" [disabled]="isDisabled"> Añadir</button>
+  </div>
+</div>
