--- a/src/app/components/info-user/info-user.component.css
+++ b/src/app/components/info-user/info-user.component.css
@@ -1,7 +1,10 @@
 .container {
-  width: 90%;
+  background-color: red;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+}
+
+.container p {
+  margin-left: 10px
 }
