--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,5 @@
-<p>login works!</p>
+Usuario
+<input type="text" [(ngModel)]="user" name="user" required>
+Contraseña
+<input type="password" [(ngModel)]="password" name="password" required>
+<button (click)="login()">Ingresar</button>
